# bookstack-file-exporter

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  entrypoint.sh  pyproject.toml  release-please-config.json  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml  renovate.json
.github/actions/docker/: action.yml
.github/actions/python/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: on_pr_merged.yml  on_pr_open.docker-build.yml  on_pr_open.yml  on_release.yml  on_tag.push.yml  release_please.yml  test.yml
bookstack_file_exporter/: __main__.py  pre_check.py  run.py  run_args.py
bookstack_file_exporter/archiver/: archiver.py  asset_archiver.py  assets_archiver.py  minio_archiver.py  node_archiver.py  page_archiver.py  s3_archiver.py  util.py
bookstack_file_exporter/common/: logging.py  util.py
bookstack_file_exporter/config_helper/: config_helper.py  models.py  notifications.py  remote.py
bookstack_file_exporter/exporter/: exporter.py  filter.py  node.py  selector.py  util.py
bookstack_file_exporter/health/: server.py  status.py
bookstack_file_exporter/notify/: handler.py  models.py  notifiers.py
data/: config.yml  fail.yml
docs/: backup-behavior.md  configuration.md  filters.md  getting-started.md  installation.md  notifications.md  remote-storage.md
docs/superpowers/plans/: 2026-06-02-modify-links-books-chapters.md
docs/superpowers/specs/: 2026-06-02-modify-links-books-chapters-design.md
examples/: config.yml  docker-compose.yaml  local_config.yml  minio_config.yml
tests/: __init__.py  conftest.py  helpers.py
tests/fixtures/: __init__.py  api_attachment_content.json  api_image_content.json  book_detail_mixed.json  books_list_paginated.json  chapter_detail.json  html_page_anchor_wrapped_image.html  html_page_attachment.html  mock_config.py  page_detail.json  shelf_detail.json
tests/integration/: __init__.py  test_empty_bookstack.py  test_full_traversal.py
tests/unit/: __init__.py  conftest.py  test_archiver.py  test_archiver_util.py  test_asset_archiver.py  test_asset_archiver_config.py  test_asset_archiver_core.py  test_asset_archiver_html.py  test_asset_archiver_modify_html.py  test_book_archiver.py  test_chapter_archiver.py  test_common_util.py  test_config_helper.py  test_filter.py  test_health.py  test_http_helper.py  test_legacy_keys.py  test_logging.py  test_main.py  test_minio_archiver.py  test_models_export_workers.py  test_models_filters.py  test_models_object_storage.py  test_node.py  test_node_exporter.py  test_notifications.py  test_notifiers.py  test_notify_handler.py  test_notify_models.py  test_page_archiver.py  test_remote_config.py  test_remote_credentials.py  test_run.py  test_run_args.py  test_s3_archiver.py  test_selector.py  test_util_cron.py
