[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bookstack-file-exporter"
version = "0.0.1"
description = "An exporter written in python to export all documents from a bookstack instance in different formats"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "pchang388" }]
keywords = ["bookstack", "exporter"]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Pyyaml>=6.0.2",
    "Pydantic>=2.13.4",
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.3",
    "minio>=7.2.15",
    "apprise>=1.9.4",
    "markdown-it-py>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/homeylab/bookstack-file-exporter"

[project.scripts]
bookstack-file-exporter = "bookstack_file_exporter.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "pylint",
]

[tool.setuptools.packages.find]
include = ["bookstack_file_exporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --cov=bookstack_file_exporter --cov-report=term-missing --cov-report=xml"
markers = [
    "integration: tests that exercise multiple units together (slower, may build entire node trees)",
    "slow: tests that take >1s",
]

[tool.coverage.run]
branch = true
source = ["bookstack_file_exporter"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
