[metadata]
name = bookstack-file-exporter
# version will be replaced by IMAGE_TAG in Makefile
version = 0.0.1
author = pchang388
# author_email = your@email.address
url = https://github.com/homeylab/bookstack-file-exporter
description = An exporter written in python to export all documents from a bookstack instance in different formats
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bookstack, exporter
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    Pyyaml >= 6.0.1 # https://pypi.org/project/PyYAML/
    Pydantic >= 2.4.0 # https://docs.pydantic.dev/latest/
    requests >= 2.31.0 # https://pypi.org/project/requests/
    minio >= 7.2.0 # https://pypi.org/project/minio/
packages = find:

[options.entry_points]
console_scripts = 
    bookstack-file-exporter = bookstack_file_exporter.__main__:main